Prod-EU/force-app/main/default/objects/Sample_Order_Response_Event__e/Sample_Order_Response_Event__e.object-meta.xml
<CustomObject>
    <label>Sample Order Response Event</label>
    <pluralLabel>Sample Order Response Events</pluralLabel>
</CustomObject>