Prod-EU/force-app/main/default/objects/Sample_Order_Response_Event__e/fields/IntegrationErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>IntegrationErrorMessage__c</fullName>
    <label>IntegrationErrorMessage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>