Prod-EU/force-app/main/default/objects/Sample_Order_Response_Event__e/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <label>IntegrationStatus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>