Prod-EU/force-app/main/default/objects/Sample_Order_Response_Event__e/fields/OCEOrderReference__c.field-meta.xml
<CustomField>
    <fullName>OCEOrderReference__c</fullName>
    <label>OCEOrderReference</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>