Prod-EU/force-app/main/default/objects/Sample_Order_Response_Event__e/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>OrderNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>