Prod-EU/force-app/main/default/objects/Sample_Order_Response_Event__e/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>OrderStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>