Prod-EU/force-app/main/default/objects/Sample_Order_Response_Event__e/fields/TrackingUrl__c.field-meta.xml
<CustomField>
    <fullName>TrackingUrl__c</fullName>
    <label>TrackingURL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>